[package]
name = "wiz-lights-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
futures = "0.3"
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
serde_json = "1.0"
serde_with = "3.16.1"
strum = "0.25"
strum_macros = "0.25"
thiserror = "2.0.18"
tokio = { version = "1", features = ["net", "time", "rt", "rt-multi-thread", "sync", "macros"] }
